--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     display: flex;
     justify-content: center;
     height: 50%;
-    
+    padding-bottom: 50px;
 }
 
 .playground{
@@ -28,14 +28,16 @@ body {
     flex-direction: column;
     gap: 2em;
     justify-content: space-between;
-    border: 4px solid green;
+    /* border: 4px solid green; */
     width: 50%;
-    padding-bottom: 50px;
+    
 }
 
-.playground > * {
-    border: 2px solid red;
+img {
+    height: 10px;
+    width: 50px;
 }
+
 
 .scorecard, .message {
     font-family: 'Sriracha', cursive;
@@ -44,7 +46,7 @@ body {
 }
 
 .players {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -54,18 +56,23 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1em;
+    
 }
 
-.choice > * {
+
+.leftPlayer img, .rightPlayer img{
+    height: 150px;
+    width: 170px;
+}
+
+#rps {
     height: 50px;
     width: 50px;
 }
 
-.players img{
-    height: 100px;
-    width: 100px;
+#rps:hover{
+    transform: scale(1.2);
 }
-
 
 
 
