--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,6 @@ header {
     text-align: center;
 }
 
-body {
-    
-    background-image: url('images/background.avif');
-    background-repeat: no-repeat;
-    height: 900px;
-    background-position: center;
-}
-
 .centerGround{
     display: flex;
     justify-content: center;
@@ -28,7 +20,6 @@ body {
     flex-direction: column;
     gap: 2em;
     justify-content: space-between;
-    /* border: 4px solid green; */
     width: 50%;
     
 }
@@ -46,7 +37,6 @@ img {
 }
 
 .players {
-    /* flex-grow: 1; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -65,12 +55,12 @@ img {
     width: 170px;
 }
 
-#rps {
+.rps {
     height: 50px;
     width: 50px;
 }
 
-#rps:hover{
+.rps:hover{
     transform: scale(1.2);
 }
 
